Match profiles.js naming with SkotOS default

--- a/root/usr/Gables/data/www/gables.htm
+++ b/root/usr/Gables/data/www/gables.htm
@@ -25,7 +25,7 @@
 	<script type="text/javascript">
 		<!--
 		function initConnection() {
-			initWebSocket(profiles.portal_game);
+			initWebSocket(profiles.portal_gables);
 		}
 		//-->
 	</script>
